# LLMProductDescriber

./: .gitignore  README.md  config.py  main.py  pyproject.toml  testpr.py
api/: img_router.py  text_router.py
describer_ui/: rxconfig.py
describer_ui/describer_ui/: describer_ui.py
etc/: config.py
llmmodel/: llm_connection.py  schemas.py  utils.py
llmmodel/promts/: prompts.yaml
