[tool.poetry]
name = "llmproductdescriber"
version = "0.1.0"
description = ""
authors = ["fatmaann <sol1222183@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
mistralai = "^1.1.0"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
